--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -31,6 +31,7 @@
         &__combos{
             display: flex;
             justify-content: space-between;
+            list-style: none;
 
             &__combo{
                 width: calc(50% - 12px);
@@ -40,17 +41,7 @@
                     max-height: 60px;
                 }
 
-                button{
-                    display: block;
-                    width: 100%;
-                    height: 60px;
-                    font-size: 18px;
-                    color: variaveis.$corTextoSecundario;
-                    background-color: #6421ff;
-                    border-radius: 4px;
-                    margin-top: 2vw;
-                    margin-bottom: 8px;
-                }
+            
             }
         }
     }
