--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @use 'hero';
 @use 'variaveis';
 @use 'shows';
+@use 'plans';
 
 @font-face {
     font-family:Avenir ;
@@ -19,6 +20,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Avenir, sans-serif;
+    
 }
 
 body {
@@ -42,7 +44,7 @@ body {
 .text{
     @include text;
 }
-.tex-small{
+.text-small{
     @include text(12px);
 }
 
@@ -62,4 +64,16 @@ body {
     @include text(18px);
     color: variaveis.$corTextoSecundario;
     text-decoration: underline;
+}
+
+.button{
+    display: block;
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+    color: variaveis.$corTextoSecundario;
+    background-color: #6421ff;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
 }
