--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,9 +1,10 @@
+
 @use 'variaveis';
 
-.footer{
+.footer {
     padding: 26px 8px;
 
-    &__container{
+    &__container {
         max-width: 1024px;
         width: 100%;
         margin: 0 auto;
@@ -11,58 +12,59 @@
         padding-bottom: 20px;
     }
 
-    &__logo{
+    &__logo {
         width: 80px;
         margin: 0 auto 10px;
     }
 
-    &__links{
+    &__links {
         margin-bottom: 16px;
         display: flex;
         align-items: center;
         flex-wrap: wrap;
         justify-content: center;
-
-        &__item{
+        
+        &__item {
             display: inline-block;
 
-            a{
+            a {
                 text-decoration: none;
                 padding: 8px 16px;
                 display: block;
 
-                &:hover{
+                &:hover {
                     color: variaveis.$corTextoSecundario;
                 }
             }
         }
     }
 
-    p{
+    p {
         margin-bottom: 16px;
     }
 }
 
-.language-selector{
+.language-selector {
     display: flex;
     align-items: center;
 
-    img{
+    img {
         height: 18px;
         width: 18px;
     }
 
-    select{
+    select {
         background-color: transparent;
         border: none;
         color: variaveis.$corTextoPrincipal;
-    }
+        height: 38px;
 
-    &:hoover{
-        color: variaveis.$corTextoSecundario;
-    }
+        &:hover {
+            color: variaveis.$corTextoSecundario;
+        }
 
-    opiton{
-        color: variaveis.$corDeFundo;
+        option {
+            color: variaveis.$corDeFundo;
+        }
     }
 }
