--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,50 +1,62 @@
 @use 'variaveis';
 
-.header{
-    position:sticky;
+.header {
+    position: sticky;
     top: 0;
     left: 0;
     background-color: variaveis.$corDeFundo;
-    transition: background-color 0.5 ease;
+    transition: background-color .5s ease;
     z-index: 1;
 
-    &--is--hidden{
+    &--is-hidden {
         background-color: transparent;
-        transition: background-color 0.5 ease;
 
-        .header{
-            &__logo, &__links__item:first-child{
+        .header {
+            &__logo, &__links__item:first-child {
                 opacity: 0;
                 visibility: hidden;
-                transition: opacity 0.5 ease;
             }
         }
     }
 
-    &__container{
+    &__container {
         padding: 8px 36px;
         display: flex;
         justify-content: space-between;
-    }
 
-    &__logo{
-        max-width: 40%;
-        width: 100%;
-        margin: 5px;
-        transition: opacity 0.5 ease;
-    }
-
-    &__links{
-        display: flex;
-        transition: opacity 0.5 ease;
-
-        &__item{
-            margin: 5px;
+        @media (max-width: 768px) {
+            padding: 0 12px 0 20px;
         }
     }
 
-    .button{
+    &__logo {
+        max-width: 80px;
+        width: 100%;
+        margin: 5px;
+        transition: opacity .5s ease;
+
+        @media (max-width: 768px) {
+            max-width: 64px;
+        }
+    }
+
+    &__links {
+        display: flex;
+
+        &__item {
+            margin: 5px;
+            transition: opacity .5s ease;
+        }
+    }
+
+    .button {
         height: 50px;
+
+        @media (max-width: 768px) {
+            font-size: 13px;
+            padding: 8px 11px;
+            height: 40px;
+            letter-spacing: 0;
+        }
     }
 }
-
